feat(api-cli): add get routes for nav and uploads
